--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<h1> <a href="#">The Hyper Progame</a></h1>
 	<form id="searchForm" class="form-inline" style="margin-top: 5vh; font:normal 24px monospace;">
-    <input type="text" id="searchValue" class="form-control" placeholder="Search best Movies 😎">
+    <input type="text" id="searchValue" class="form-control" placeholder="Find a game ...">
     <input style="margin-top: 15px; display: none;" type="submit" id="btnSearch" value="Search Movie" class="btn btn-primary btn-lg">
   </form>
 
@@ -18,12 +18,12 @@
     <a href="#pagelist/borderlands">PageList borderlands</a>
 
     <section id="OldpageContent">Choisissez un lien
-      <div class="row row-cols-3 games" id="pageContent">
+      <div class="games" id="pageContent">
       </div>
     </section>
   </div>
 
-<!--   <button class="btn btn-primary" id="btnTest">COUCOU</button> -->
+
 
   <script src="./dist/bundle.js"></script>
 
